Revert "Merge branch 'master' of ssh://opennms.git.sourceforge.net/gitroot/opennms/opennms"
This reverts commit 65fd8d4db459488b30c9607b3b1e05059314024c, reversing
changes made to 7699e48f448172ef2efa58f4eed9a7267347a6b1.